[gd_scene load_steps=5 format=3 uid="uid://bjolphmeflso6"]

[ext_resource type="Script" uid="uid://chtkeocw7702o" path="res://enemy/gun.gd" id="1_0s6dv"]
[ext_resource type="PackedScene" uid="uid://vjexxy0oei3q" path="res://bullet/bullet.tscn" id="2_udwkg"]
[ext_resource type="PackedScene" uid="uid://bgr7f0ikfr1cw" path="res://Global/audio_manager/audio_component.tscn" id="3_lpk84"]
[ext_resource type="AudioStream" uid="uid://bu4edkioj032m" path="res://enemy/shoot.wav" id="4_kyqt5"]

[node name="Gun" type="Node2D"]
script = ExtResource("1_0s6dv")
bullet_scene = ExtResource("2_udwkg")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(27, 0)
points = PackedVector2Array(0, 0, -20, 0)
width = 9.0
default_color = Color(0.136826, 0.136826, 0.136826, 1)

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2(26, -12)
rotation = -0.349066
points = PackedVector2Array(0, 0, -20, 0)
width = 9.0
default_color = Color(0.136826, 0.136826, 0.136826, 1)

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2(26, 12)
rotation = 0.349066
points = PackedVector2Array(0, 0, -20, 0)
width = 9.0
default_color = Color(0.136826, 0.136826, 0.136826, 1)

[node name="Cooldown" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AudioComponent" parent="Cooldown" instance=ExtResource("3_lpk84")]
signal_name = "timeout"
audio = ExtResource("4_kyqt5")

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
